--- a/index.html
+++ b/index.html
@@ -116,30 +116,30 @@
                      
                      <div class="row work-row"> <!--even-->
 				<div class="small-12 medium-6 columns">
-					<img src="assets/images/ms.png" alt="">
+					<img src="assets/images/cineblocks.jpeg" alt="">
 				</div>
 				<div class="small-12 medium-5 medium-offset-1 columns">
 					<div class="details details-ftm">
-						<h3>Medical Supplychain on Blockchain</h3>
+						<h3>CineBLOCKS</h3>
 						<p class="platform">Web</p>
 						<p class="icons"><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
-						<p>Pharmaceutical companies that manufacture, ship and supply products face difficulties in tracking their products, allowing counterfeiters to inject counterfeit drugs into the system. The ability of blockchain systems to pinpoint the origin of data makes them particularly suitable for pharmaceutical supply chain applications.</p>
-						<a class="my-button" target="_blank" href="https://github.com/Salmandabbakuti/hlf-medicChain">Go to Project</a>
+						<p>Telling stories through camera and creating one masterpiece after another, a job at a film production company sounds like working in a dream factory. But there always lies an incredibly troublesome hurdle that needs most of our attention but actually gets the least./</p>
+						<a class="my-button" target="_blank" href="https://github.com/zaryab2000/CineBlocks">Go to Project</a>
 					</div>
 				</div>
 			</div>
 
                      <div class="row work-row"> <!--odd-->
 				<div class="small-12 medium-6 medium-push-6 columns">
-					<img src="assets/images/lr.jpeg" alt="">
+					<img src="assets/images/MEDICARE.png" alt="">
 				</div>
 				<div class="small-12 medium-5 medium-pull-7 columns">
 					<div class="details details-ftm">
-						<h3>Land Registry System On Blockchain</h3>
+						<h3>MEDICARE CHAIN</h3>
 						<p class="platform">Web</p>
 						<p class="icons"><i class="fi-monitor"></i><i class="fi-tablet-portrait"></i><i class="fi-mobile"></i></p>
-						<p>A demonstration of digitizing traditional land records on blockchain to maintain immutability of land ownerships, land sales and to prevent frauds, land grabbings. Proudly Built With Hyperledger Fabric.  </p>
-						<a class="my-button" target="_blank" href="https://salmandabbakuti.github.io/hlf-landRegistry">Go to Project</a>
+						<p>MediCare Chain is a decentralized application built on top of Ethereum that aims to provide a HealthCare Solution by ensuring a transaparent and reliable system of providing insurance as well as donations to the patients, with utmost efficiency and zero involvement of any third party. </p>
+						<a class="my-button" target="_blank" href="https://github.com/zaryab2000/MediCare-Chain">Go to Project</a>
 					</div>
 				</div>
 			</div>
@@ -153,7 +153,7 @@
 			<h2 class="text-center">Summary</h2>
 			<div class="row">
 				<div class="small-12 medium-8 medium-offset-2">
-					<p class="text-center tag-line">Blockchain and Cybersecurity are no longer my career decisions, They are life decisions. I am gonna spend my life in this space. I am very passionate to work with Blockchain Technologies. Here are some of the domains I've helped many with...</p>
+					<p class="text-center tag-line">yet to be filled</p>
 				</div>
 			</div>
 			<div class="row">
@@ -172,7 +172,7 @@
 					<p class="text-center">I'm currently available for work.</p>
 				</div>
 				<div class="small-12 columns" id="startButtonDiv">
-					<a class="my-button form-button" href="mailto:dabbakuti.Zaryab@gmail.com">Leave A Message</a>
+					<a class="my-button form-button" href="mailto:zaryabafser2000@gmail.com">Leave A Message</a>
 				</div>
 			</div>
 		</section>
@@ -180,7 +180,6 @@
 		<footer id="footer">
 			<div class="row text-center">
 				<div class="small-12 medium-6 medium-offset-3 columns">
-					<p id="logo">TechNow</p>
 					<p id="copyright">Copyright &copy;2020 | Zaryab Afser</p>
 				</div>
 			</div>
